# BxTour

./: CMakeLists.txt  README.rst
programs/: bxtour000.cxx  bxtour001.cxx  bxtour002.cxx  bxtour003.cxx
tools/: build.sh  clean.sh
